fixed menu scrollbar

--- a/layout/wgt/wgt/wgt.menu.css
+++ b/layout/wgt/wgt/wgt.menu.css
@@ -14,7 +14,6 @@
 div.wgt-menu.folder
 {
   width:100%;
-  margin:3px;
   padding:3px;
 }
 
